fixes links being cut off

--- a/src/css/includes/view.less
+++ b/src/css/includes/view.less
@@ -65,6 +65,9 @@ main {
 		}
 	}
 	nav {
+	  position: relative;
+	  z-index: 200;
+	  width: 85%;
     margin-bottom: 0px;	
     @media screen and (max-width: 667px) {
       margin-top: 25px;
@@ -134,7 +137,7 @@ footer {
     margin-right: 0;
     padding-right: 0;
     @media screen and (max-width: 640px), (max-height: 760px) {
-      right: 50px;;
+      right: 50px;
     }
   }
 }
